// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeDetail /> Should correctly assign a className 1`] = `
<div
  className="p2 bg-white classname-test"
>
  <h2
    className="h2"
  >
    Test Recipe
  </h2>
  <img
    alt="Test Recipe"
    className="fit"
  />
  <div>
    <span>
      Test Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <ul>
    <li>
      Ing 1
    </li>
    <li>
      Ing 2
    </li>
    <li>
      Ing 3
    </li>
  </ul>
  <h3>
    Steps
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
    <li>
      Step 3
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;

exports[`<RecipeDetail /> Should correctly render 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test Recipe
  </h2>
  <img
    alt="Test Recipe"
    className="fit"
  />
  <div>
    <span>
      Test Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <ul>
    <li>
      Ing 1
    </li>
    <li>
      Ing 2
    </li>
    <li>
      Ing 3
    </li>
  </ul>
  <h3>
    Steps
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
    <li>
      Step 3
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;

exports[`<RecipeDetail /> Should render recipe without ingredients 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test Recipe
  </h2>
  <img
    alt="Test Recipe"
    className="fit"
  />
  <div>
    <span>
      Test Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <ul />
  <h3>
    Steps
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
    <li>
      Step 3
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;

exports[`<RecipeDetail /> Should render recipe without steps 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test Recipe
  </h2>
  <img
    alt="Test Recipe"
    className="fit"
  />
  <div>
    <span>
      Test Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <ul>
    <li>
      Ing 1
    </li>
    <li>
      Ing 2
    </li>
    <li>
      Ing 3
    </li>
  </ul>
  <h3>
    Steps
  </h3>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;

exports[`<RecipeDetail /> Should render zero state 1`] = `
<p
  className="h3 p2 bg-white italic center"
>
  Please select a recipe
</p>
`;
